aligned grid images, fixed positions of other elements

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ navbar{
   left:0;
   top:0;
   z-index: 3;
-
 }
 
 
@@ -29,6 +28,7 @@ navbar{
     height:25px;
     cursor: pointer;
   }
+
   .right-nav{
     display: flex;
     flex-direction: row;
@@ -140,8 +140,9 @@ width: 80%;
 .fifth-article,
 .sixth-article,
 .seventh-article{
-  width: 50%;
+  max-width: 600px;
   margin: auto;
+
   font-size: 20px;
   font-family:nyt-imperial,georgia,'times new roman',times,serif;
 
@@ -179,7 +180,7 @@ aside{
   margin-top: 10em;
   margin-right:3em ;
   justify-content: space-between;
-  
+
 }
 .aside-heading{
   font-family: nyt-franklin, helvetica, arial, sans-serif;
@@ -200,7 +201,7 @@ aside{
     float: right;
     text-align: left;
     margin-left: 2em;
-    
+
 }
 .aside-para-image{
   margin-left:0;
@@ -246,27 +247,38 @@ aside{
 }
 .grid-image{
   width: 200px;
+  height: 150px;
 }
 
 .grid-paragraph{
-width:180px;
-font-family: nyt-franklin,arial,helvetica,sans-serif;
+    font-family: nyt-franklin,arial,helvetica,sans-serif;
     font-size: 14px;
     line-height: 17px;
     font-weight: 300;
     color: #000000;
+    font-style: normal;
 }
+
 iframe{
   width:600px;
   height:319px;
 }
+
+.iframe-caption{
+color: #666;
+font-size: 0.9375rem;
+line-height: 1.25rem;
+}
+
 .article-image{
   background-color: lightcoral;
   width:100%;
 }
+
 figure img{
   width:100%;
   height: 100%;
+  margin: 0;
 }
 .version{
   font-size:14px;
@@ -276,7 +288,7 @@ figure img{
 }
 .comments{
   margin:90px 0 0 0 ;
-  
+
   display:flex;
   justify-content: space-between;
   align-items: center;
@@ -293,4 +305,3 @@ figure img{
     border-radius:3px;
     border: 1px ;
 }
-
